<resources>
    <string name="app_name">LabTrack</string>
    <string name="sign_in">log in</string>
    <string name="forget_password"><u>Forget Password?</u></string>
    <string name="passwordHint"><b>Password</b></string>
    <string name="e_mail_address">E-mail address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_account_yet">Don\'t have account yet?</string>
    <string name="register">Register</string>
    <string name="connectionError">Please check your internetConnection and try again </string>
    <string name="emailErr">Enter E-mail to recover your password</string>
    <string name="emailFormat">Wrong Email format,or email is not registered </string>
    <string name="emptyPass">Password can\'t be Empty</string>
    <string name="emptyMail">E-mail address can\'t be Empty</string>
    <string name="emptyName">Name can\'t be Empty</string>
    <string name="wrongPass">Wrong Password</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="submit">Submit</string>
    <string name="passwordMatch">Password doesn\'t match</string>
    <string name="passwordLength">Length can\'t be less than 9 characters</string>
    <string name="phoneLength">Length can\'t be less than 11 number</string>
    <string name="phoneFormat">phone number wrong format</string>
    <string name="cantbeempty">can\'t be empty</string>
    <string name="Total">"Total "</string>
    <string name="pc">PC</string>
    <string name="working">"Working "</string>
    <string name="needrepair">"Need repairing "</string>
    <string name="labsList">Labs List</string>
    <string name="edit_lab">Edit lab</string>
    <string name="delete">Delete</string>
    <string name="sign_out">Sign out</string>
    <string name="sort">Sort</string>
    <string name="by_number">by number</string>
    <string name="by_working">by Working</string>
    <string name="by_not_working">by not working</string>
    <string name="restore_backup">Restore backup</string>
    <string name="add">Add</string>
    <string name="make_backup">Make backup</string>
    <string name="report_a_problem">Handle a problem</string>
    <string name="noKeyboard">No keyBoard found</string>
    <string name="noMouse">No mouse found</string>
    <string name="noMonitor">No monitor found</string>
    <string name="noRam">No Ram found</string>
    <string name="noHDD">No HDD found</string>
    <string name="noProcessor">No processor found</string>
    <string name="missingPrograms">Missing Programs</string>
    <string name="noOperatingsystem">no operating system</string>
    <string name="problemFound">problems found</string>
    <string name="allIsGood">All is good</string>
    <string name="new_lab">New Lab</string>
    <string name="lab_name">Lab Name</string>
    <string name="lab_max_capacity">Lab Max Capacity</string>
    <string name="location">Location</string>
    <string name="delete_lab">Delete Lab</string>
    <string name="connecting">Connecting</string>
    <string name="processor">Processor</string>
    <string name="serial_number">Serial Number</string>
    <string name="pc_lab_number">PC lab number</string>
    <string name="date_of_buying">Date of Buying</string>
    <string name="ram_capacity">Ram Capacity</string>
    <string name="gb">GB</string>
    <string name="not_working">Not Working :</string>
    <string name="programs">Programs :</string>
    <string name="state">state :</string>
    <string name="windowss">Windows :</string>
    <string name="serial_numbers">Serial Number :</string>
    <string name="date_of_buyings">Date Of Buying :</string>
    <string name="processors">Processor :</string>
    <string name="ram">RAM :</string>
    <string name="hdds">HDD :</string>
    <string name="gpu">GPU</string>
    <string name="report_or_fix_pc_problem">Report or fix pc problem</string>
    <string name="software">SoftWare</string>
    <string name="hardware">HardWare</string>
    <string name="other">Other</string>
    <string name="cpu">CPU</string>
    <string name="hdd">HDD</string>
    <string name="mouse">Mouse</string>
    <string name="keyboard">Keyboard</string>
    <string name="monitor">Monitor</string>
    <string name="windows">Windows</string>
    <string name="problem_description">Problem description</string>
    <string name="type_your_missing_programs_ex_visualstudio">Type your missing programs ex( visualStudio, ..)</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="ramm">RAM</string>
    <string name="addingLap">Adding Lab</string>
    <string name="labmaxCapacity">"Max capacity should have only numbers "</string>
    <string name="labLimit">"Max capacity shouldn't be more than 50 or less than 0 "</string>
    <string name="edit">" Edit"</string>
    <string name="labExist">This lab already exist</string>
    <string name="alphaOnly">Lab name should have letters and numbers only</string>
    <string name="enterLabName">Please Enter Lab Name</string>
    <string name="numberBiggerCap">PC number is bigger than lab max capacity</string>
    <string name="numberRepeated">PC number is repeated</string>
    <string name="wrongRam">Wrong Capacity of RAM</string>
    <string name="wrongHDD">Wrong Capacity of HDD</string>
    <string name="restore_backup_dialogue">Are you sure to restore backup and replace all data?</string>
    <string name="upload_backup_dialogue">Are you sure to Override old backup?</string>
    <string name="yes">Yes</string>
    <string name="pcList">" Pc List for  "</string>
    <string name="Good">Good</string>
    <string name="not_good">Not good</string>
    <string-array name="cpus">
        <item id="1">"core i3"</item>
        <item id="2">"core i5"</item>
        <item id="3">"core i7"</item>
    </string-array>
</resources>
